# vipipe

./: .gitignore  Makefile  pyproject.toml  requirements.txt
docker/: Dockerfile.alpine.gstreamer  Dockerfile.ubuntu.gstreamer
samples/cowdetect/: Dockerfile  docker-compose.yaml  main.py
samples/db_writers/: writers_example.py
samples/facenet/: Dockerfile  docker-compose.yaml  main.py  requirements.txt
samples/fpstest/: Dockerfile  docker-compose.yaml  main.py  requirements.txt
samples/metadetect/: Dockerfile  detector.py  docker-compose.yaml  renderer.py  requirements.txt
samples/rtsp2hls/: docker-compose.yaml
samples/rtsp_pub_sub_hls/: docker-compose.yaml
src/gst_plugins/python/: custom.py  zeromq_sink.py  zeromq_src.py  zmqsink.py  zmqsrc.py
src/scripts/: rtsp_pub.py  sserver.py  test_pub.py  test_sub.py
src/utils/: start_gst_pipeline.py
src/vipipe/: logging.py
src/vipipe/handlers/: __init__.py  base.py  drawer.py  fpstest.py  scaler.py
src/vipipe/interface/: reader.py  writer.py
src/vipipe/transport/gstreamer/: __init__.py  entity.py  reader.py  writer.py
src/vipipe/transport/interface/: __init__.py  entity.py  reader.py  writer.py
src/vipipe/transport/postgres/: writer.py
src/vipipe/transport/realsense/: reader.py
src/vipipe/transport/s3/: writer.py
src/vipipe/transport/zeromq/: __init__.py  reader.py  writer.py
src/vipipe/transport/zeromq/utils/: cli.py
src/vipipe/zeromq/: message.py  reader.py  writer.py
