[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vipipe"
version = "0.1.0"
description = "Пайплайновая видео-обработка"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyzmq>=26.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vipipe*"]

[tool.ruff.lint]
extend-ignore = ["E402"]

[tool.ruff]
line-length = 120
